reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Описание ускорителей типов, доступных для классов .NET Framework
keywords: powershell,командлет
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/13/2020
ms.locfileid: "93231897"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="a037e-104">О ускорителях типов</span><span class="sxs-lookup"><span data-stu-id="a037e-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="a037e-105">КОРОТКИЙ ОПИСАНИЕ</span><span class="sxs-lookup"><span data-stu-id="a037e-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="a037e-106">Описание ускорителей типов, доступных для классов .NET Framework</span><span class="sxs-lookup"><span data-stu-id="a037e-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="a037e-107">ПОДРОБНОЕ ОПИСАНИЕ</span><span class="sxs-lookup"><span data-stu-id="a037e-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="a037e-108">Ускорители типов являются псевдонимами для классов .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="a037e-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="a037e-109">Они позволяют обращаться к конкретным классам .NET Framework без явного ввода полного имени класса.</span><span class="sxs-lookup"><span data-stu-id="a037e-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="a037e-110">Например, можно сократить класс **алиасаттрибуте** с `[System.Management.Automation.AliasAttribute]` на `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="a037e-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="a037e-111">Все ускорители типов по-прежнему должны быть заключены в квадратные скобки ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="a037e-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="a037e-112">Доступные ускорители типов</span><span class="sxs-lookup"><span data-stu-id="a037e-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="a037e-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="a037e-113">Accelerator</span></span>          |                           <span data-ttu-id="a037e-114">Полное имя класса</span><span class="sxs-lookup"><span data-stu-id="a037e-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="a037e-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="a037e-115">adsi</span></span>                         | <span data-ttu-id="a037e-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="a037e-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="a037e-117">адсисеарчер</span><span class="sxs-lookup"><span data-stu-id="a037e-117">adsisearcher</span></span>                 | <span data-ttu-id="a037e-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="a037e-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="a037e-119">Псевдоним</span><span class="sxs-lookup"><span data-stu-id="a037e-119">Alias</span></span>                        | <span data-ttu-id="a037e-120">System. Management. Automation. Алиасаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="a037e-121">алловемптиколлектион</span><span class="sxs-lookup"><span data-stu-id="a037e-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="a037e-122">System. Management. Automation. Алловемптиколлектионаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="a037e-123">алловемптистринг</span><span class="sxs-lookup"><span data-stu-id="a037e-123">AllowEmptyString</span></span>             | <span data-ttu-id="a037e-124">System. Management. Automation. Алловемптистрингаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="a037e-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="a037e-125">AllowNull</span></span>                    | <span data-ttu-id="a037e-126">System. Management. Automation. Алловнуллаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="a037e-127">аргументкомплетер</span><span class="sxs-lookup"><span data-stu-id="a037e-127">ArgumentCompleter</span></span>            | <span data-ttu-id="a037e-128">System. Management. Automation. Аргументкомплетераттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="a037e-129">массиве</span><span class="sxs-lookup"><span data-stu-id="a037e-129">array</span></span>                        | <span data-ttu-id="a037e-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="a037e-130">System.Array</span></span>                                                        |
|<span data-ttu-id="a037e-131">bigint</span><span class="sxs-lookup"><span data-stu-id="a037e-131">bigint</span></span>                       | <span data-ttu-id="a037e-132">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="a037e-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="a037e-133">bool</span><span class="sxs-lookup"><span data-stu-id="a037e-133">bool</span></span>                         | <span data-ttu-id="a037e-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="a037e-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="a037e-135">byte</span><span class="sxs-lookup"><span data-stu-id="a037e-135">byte</span></span>                         | <span data-ttu-id="a037e-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="a037e-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="a037e-137">char</span><span class="sxs-lookup"><span data-stu-id="a037e-137">char</span></span>                         | <span data-ttu-id="a037e-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="a037e-138">System.Char</span></span>                                                         |
|<span data-ttu-id="a037e-139">Цимкласс</span><span class="sxs-lookup"><span data-stu-id="a037e-139">cimclass</span></span>                     | <span data-ttu-id="a037e-140">Microsoft. Management. Infrastructure. Цимкласс</span><span class="sxs-lookup"><span data-stu-id="a037e-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="a037e-141">Цимконвертер</span><span class="sxs-lookup"><span data-stu-id="a037e-141">cimconverter</span></span>                 | <span data-ttu-id="a037e-142">Microsoft. Management. Infrastructure. Цимконвертер</span><span class="sxs-lookup"><span data-stu-id="a037e-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="a037e-143">ciminstance</span><span class="sxs-lookup"><span data-stu-id="a037e-143">ciminstance</span></span>                  | <span data-ttu-id="a037e-144">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="a037e-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="a037e-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="a037e-145">CimSession</span></span>                   | <span data-ttu-id="a037e-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="a037e-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="a037e-147">Цимтипе</span><span class="sxs-lookup"><span data-stu-id="a037e-147">cimtype</span></span>                      | <span data-ttu-id="a037e-148">Microsoft. Management. Infrastructure. Цимтипе</span><span class="sxs-lookup"><span data-stu-id="a037e-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="a037e-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="a037e-149">CmdletBinding</span></span>                | <span data-ttu-id="a037e-150">System. Management. Automation. Кмдлетбиндингаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="a037e-151">регионов</span><span class="sxs-lookup"><span data-stu-id="a037e-151">cultureinfo</span></span>                  | <span data-ttu-id="a037e-152">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="a037e-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="a037e-153">DATETIME</span><span class="sxs-lookup"><span data-stu-id="a037e-153">datetime</span></span>                     | <span data-ttu-id="a037e-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="a037e-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="a037e-155">Decimal</span><span class="sxs-lookup"><span data-stu-id="a037e-155">decimal</span></span>                      | <span data-ttu-id="a037e-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="a037e-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="a037e-157">double</span><span class="sxs-lookup"><span data-stu-id="a037e-157">double</span></span>                       | <span data-ttu-id="a037e-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="a037e-158">System.Double</span></span>                                                       |
|<span data-ttu-id="a037e-159">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="a037e-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="a037e-160">System. Management. Automation. Дсклокалконфигуратионманажераттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="a037e-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="a037e-161">DscProperty</span></span>                  | <span data-ttu-id="a037e-162">System. Management. Automation. Дскпропертяттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="a037e-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="a037e-163">DscResource</span></span>                  | <span data-ttu-id="a037e-164">System. Management. Automation. Дскресаурцеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="a037e-165">float</span><span class="sxs-lookup"><span data-stu-id="a037e-165">float</span></span>                        | <span data-ttu-id="a037e-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="a037e-166">System.Single</span></span>                                                       |
|<span data-ttu-id="a037e-167">guid</span><span class="sxs-lookup"><span data-stu-id="a037e-167">guid</span></span>                         | <span data-ttu-id="a037e-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="a037e-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="a037e-169">хеш</span><span class="sxs-lookup"><span data-stu-id="a037e-169">hashtable</span></span>                    | <span data-ttu-id="a037e-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="a037e-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="a037e-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="a037e-171">initialsessionstate</span></span>          | <span data-ttu-id="a037e-172">System.Management.Automation.Runspaces.IniТиалсессионстате</span><span class="sxs-lookup"><span data-stu-id="a037e-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="a037e-173">INT</span><span class="sxs-lookup"><span data-stu-id="a037e-173">int</span></span>                          | <span data-ttu-id="a037e-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="a037e-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="a037e-175">int16</span><span class="sxs-lookup"><span data-stu-id="a037e-175">int16</span></span>                        | <span data-ttu-id="a037e-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="a037e-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="a037e-177">int32</span><span class="sxs-lookup"><span data-stu-id="a037e-177">int32</span></span>                        | <span data-ttu-id="a037e-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="a037e-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="a037e-179">int64</span><span class="sxs-lookup"><span data-stu-id="a037e-179">int64</span></span>                        | <span data-ttu-id="a037e-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="a037e-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="a037e-181">IP</span><span class="sxs-lookup"><span data-stu-id="a037e-181">ipaddress</span></span>                    | <span data-ttu-id="a037e-182">System .NET. IPAddress</span><span class="sxs-lookup"><span data-stu-id="a037e-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="a037e-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="a037e-183">IPEndpoint</span></span>                   | <span data-ttu-id="a037e-184">System .NET. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="a037e-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="a037e-185">long</span><span class="sxs-lookup"><span data-stu-id="a037e-185">long</span></span>                         | <span data-ttu-id="a037e-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="a037e-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="a037e-187">MailAddress</span><span class="sxs-lookup"><span data-stu-id="a037e-187">mailaddress</span></span>                  | <span data-ttu-id="a037e-188">System .NET. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="a037e-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="a037e-189">нуллстринг</span><span class="sxs-lookup"><span data-stu-id="a037e-189">NullString</span></span>                   | <span data-ttu-id="a037e-190">System. Management. Automation. Language. Нуллстринг</span><span class="sxs-lookup"><span data-stu-id="a037e-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="a037e-191">обжектсекурити</span><span class="sxs-lookup"><span data-stu-id="a037e-191">ObjectSecurity</span></span>               | <span data-ttu-id="a037e-192">System. Security. AccessControl. Обжектсекурити</span><span class="sxs-lookup"><span data-stu-id="a037e-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="a037e-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="a037e-193">OutputType</span></span>                   | <span data-ttu-id="a037e-194">System. Management. Automation. Аутпуттипеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="a037e-195">Параметр</span><span class="sxs-lookup"><span data-stu-id="a037e-195">Parameter</span></span>                    | <span data-ttu-id="a037e-196">System. Management. Automation. Параметераттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="a037e-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="a037e-197">PhysicalAddress</span></span>              | <span data-ttu-id="a037e-198">System .NET. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="a037e-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="a037e-199">powershell</span><span class="sxs-lookup"><span data-stu-id="a037e-199">powershell</span></span>                   | <span data-ttu-id="a037e-200">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="a037e-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="a037e-201">псалиаспроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-201">psaliasproperty</span></span>              | <span data-ttu-id="a037e-202">System. Management. Automation. Псалиаспроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="a037e-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="a037e-203">pscredential</span></span>                 | <span data-ttu-id="a037e-204">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="a037e-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="a037e-205">PCSCustomObject</span><span class="sxs-lookup"><span data-stu-id="a037e-205">pscustomobject</span></span>               | <span data-ttu-id="a037e-206">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="a037e-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="a037e-207">псдефаултвалуе</span><span class="sxs-lookup"><span data-stu-id="a037e-207">PSDefaultValue</span></span>               | <span data-ttu-id="a037e-208">System.Management.Automation.PSDЕфаултвалуеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="a037e-209">пслистмодифиер</span><span class="sxs-lookup"><span data-stu-id="a037e-209">pslistmodifier</span></span>               | <span data-ttu-id="a037e-210">System. Management. Automation. Пслистмодифиер</span><span class="sxs-lookup"><span data-stu-id="a037e-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="a037e-211">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="a037e-211">psmoduleinfo</span></span>                 | <span data-ttu-id="a037e-212">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="a037e-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="a037e-213">пснотепроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-213">psnoteproperty</span></span>               | <span data-ttu-id="a037e-214">System. Management. Automation. Пснотепроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="a037e-215">PSObject</span><span class="sxs-lookup"><span data-stu-id="a037e-215">psobject</span></span>                     | <span data-ttu-id="a037e-216">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="a037e-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="a037e-217">пспримитиведиктионари</span><span class="sxs-lookup"><span data-stu-id="a037e-217">psprimitivedictionary</span></span>        | <span data-ttu-id="a037e-218">System. Management. Automation. Пспримитиведиктионари</span><span class="sxs-lookup"><span data-stu-id="a037e-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="a037e-219">псскриптмесод</span><span class="sxs-lookup"><span data-stu-id="a037e-219">psscriptmethod</span></span>               | <span data-ttu-id="a037e-220">System. Management. Automation. Псскриптмесод</span><span class="sxs-lookup"><span data-stu-id="a037e-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="a037e-221">псскриптпроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-221">psscriptproperty</span></span>             | <span data-ttu-id="a037e-222">System. Management. Automation. Псскриптпроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="a037e-223">пстипенамеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="a037e-224">System. Management. Automation. Пстипенамеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="a037e-225">psvariable</span><span class="sxs-lookup"><span data-stu-id="a037e-225">psvariable</span></span>                   | <span data-ttu-id="a037e-226">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="a037e-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="a037e-227">псвариаблепроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-227">psvariableproperty</span></span>           | <span data-ttu-id="a037e-228">System. Management. Automation. Псвариаблепроперти</span><span class="sxs-lookup"><span data-stu-id="a037e-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="a037e-229">ref</span><span class="sxs-lookup"><span data-stu-id="a037e-229">ref</span></span>                          | <span data-ttu-id="a037e-230">System. Management. Automation. Псреференце</span><span class="sxs-lookup"><span data-stu-id="a037e-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="a037e-231">regex</span><span class="sxs-lookup"><span data-stu-id="a037e-231">regex</span></span>                        | <span data-ttu-id="a037e-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="a037e-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="a037e-233">пространство выполнения</span><span class="sxs-lookup"><span data-stu-id="a037e-233">runspace</span></span>                     | <span data-ttu-id="a037e-234">System. Management. Automation. пространства выполнения</span><span class="sxs-lookup"><span data-stu-id="a037e-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="a037e-235">рунспацефактори</span><span class="sxs-lookup"><span data-stu-id="a037e-235">runspacefactory</span></span>              | <span data-ttu-id="a037e-236">System. Management. Automation. пространства выполнения. Рунспацефактори</span><span class="sxs-lookup"><span data-stu-id="a037e-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="a037e-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="a037e-237">sbyte</span></span>                        | <span data-ttu-id="a037e-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="a037e-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="a037e-239">ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="a037e-239">scriptblock</span></span>                  | <span data-ttu-id="a037e-240">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="a037e-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="a037e-241">SecureString</span><span class="sxs-lookup"><span data-stu-id="a037e-241">securestring</span></span>                 | <span data-ttu-id="a037e-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="a037e-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="a037e-243">single</span><span class="sxs-lookup"><span data-stu-id="a037e-243">single</span></span>                       | <span data-ttu-id="a037e-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="a037e-244">System.Single</span></span>                                                       |
|<span data-ttu-id="a037e-245">строка</span><span class="sxs-lookup"><span data-stu-id="a037e-245">string</span></span>                       | <span data-ttu-id="a037e-246">System.String</span><span class="sxs-lookup"><span data-stu-id="a037e-246">System.String</span></span>                                                       |
|<span data-ttu-id="a037e-247">суппортсвилдкардс</span><span class="sxs-lookup"><span data-stu-id="a037e-247">SupportsWildcards</span></span>            | <span data-ttu-id="a037e-248">System. Management. Automation. Суппортсвилдкардсаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="a037e-249">switch</span><span class="sxs-lookup"><span data-stu-id="a037e-249">switch</span></span>                       | <span data-ttu-id="a037e-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="a037e-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="a037e-251">Интервал времени</span><span class="sxs-lookup"><span data-stu-id="a037e-251">timespan</span></span>                     | <span data-ttu-id="a037e-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="a037e-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="a037e-253">тип</span><span class="sxs-lookup"><span data-stu-id="a037e-253">type</span></span>                         | <span data-ttu-id="a037e-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="a037e-254">System.Type</span></span>                                                         |
|<span data-ttu-id="a037e-255">uint16</span><span class="sxs-lookup"><span data-stu-id="a037e-255">uint16</span></span>                       | <span data-ttu-id="a037e-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="a037e-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="a037e-257">uint32</span><span class="sxs-lookup"><span data-stu-id="a037e-257">uint32</span></span>                       | <span data-ttu-id="a037e-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="a037e-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="a037e-259">uint64</span><span class="sxs-lookup"><span data-stu-id="a037e-259">uint64</span></span>                       | <span data-ttu-id="a037e-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="a037e-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="a037e-261">uri</span><span class="sxs-lookup"><span data-stu-id="a037e-261">uri</span></span>                          | <span data-ttu-id="a037e-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="a037e-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="a037e-263">валидатекаунт</span><span class="sxs-lookup"><span data-stu-id="a037e-263">ValidateCount</span></span>                | <span data-ttu-id="a037e-264">System. Management. Automation. Валидатекаунтаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="a037e-265">валидатедриве</span><span class="sxs-lookup"><span data-stu-id="a037e-265">ValidateDrive</span></span>                | <span data-ttu-id="a037e-266">System. Management. Automation. Валидатедривеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="a037e-267">валидателенгс</span><span class="sxs-lookup"><span data-stu-id="a037e-267">ValidateLength</span></span>               | <span data-ttu-id="a037e-268">System. Management. Automation. Валидателенгсаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="a037e-269">валидатенотнулл</span><span class="sxs-lookup"><span data-stu-id="a037e-269">ValidateNotNull</span></span>              | <span data-ttu-id="a037e-270">System. Management. Automation. Валидатенотнуллаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="a037e-271">валидатенотнуллоремпти</span><span class="sxs-lookup"><span data-stu-id="a037e-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="a037e-272">System. Management. Automation. Валидатенотнуллоремптяттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="a037e-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="a037e-273">ValidatePattern</span></span>              | <span data-ttu-id="a037e-274">System. Management. Automation. Валидатепаттернаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="a037e-275">валидатеранже</span><span class="sxs-lookup"><span data-stu-id="a037e-275">ValidateRange</span></span>                | <span data-ttu-id="a037e-276">System. Management. Automation. Валидатеранжеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="a037e-277">валидатескрипт</span><span class="sxs-lookup"><span data-stu-id="a037e-277">ValidateScript</span></span>               | <span data-ttu-id="a037e-278">System. Management. Automation. Валидатескриптаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="a037e-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="a037e-279">ValidateSet</span></span>                  | <span data-ttu-id="a037e-280">System. Management. Automation. Валидатесетаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="a037e-281">валидатетрустеддата</span><span class="sxs-lookup"><span data-stu-id="a037e-281">ValidateTrustedData</span></span>          | <span data-ttu-id="a037e-282">System. Management. Automation. Валидатетрустеддатааттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="a037e-283">валидатеусердриве</span><span class="sxs-lookup"><span data-stu-id="a037e-283">ValidateUserDrive</span></span>            | <span data-ttu-id="a037e-284">System. Management. Automation. Валидатеусердривеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="a037e-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="a037e-285">version</span><span class="sxs-lookup"><span data-stu-id="a037e-285">version</span></span>                      | <span data-ttu-id="a037e-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="a037e-286">System.Version</span></span>                                                      |
|<span data-ttu-id="a037e-287">void</span><span class="sxs-lookup"><span data-stu-id="a037e-287">void</span></span>                         | <span data-ttu-id="a037e-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="a037e-288">System.Void</span></span>                                                         |
|<span data-ttu-id="a037e-289">вилдкардпаттерн</span><span class="sxs-lookup"><span data-stu-id="a037e-289">WildcardPattern</span></span>              | <span data-ttu-id="a037e-290">System. Management. Automation. Вилдкардпаттерн</span><span class="sxs-lookup"><span data-stu-id="a037e-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="a037e-291">интерфейса</span><span class="sxs-lookup"><span data-stu-id="a037e-291">wmi</span></span>                          | <span data-ttu-id="a037e-292">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="a037e-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="a037e-293">WMICLASS</span><span class="sxs-lookup"><span data-stu-id="a037e-293">wmiclass</span></span>                     | <span data-ttu-id="a037e-294">System. Management. Манажементкласс</span><span class="sxs-lookup"><span data-stu-id="a037e-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="a037e-295">вмисеарчер</span><span class="sxs-lookup"><span data-stu-id="a037e-295">wmisearcher</span></span>                  | <span data-ttu-id="a037e-296">System. Management. Манажементобжектсеарчер</span><span class="sxs-lookup"><span data-stu-id="a037e-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="a037e-297">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="a037e-297">X500DistinguishedName</span></span>        | <span data-ttu-id="a037e-298">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="a037e-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="a037e-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="a037e-299">X509Certificate</span></span>              | <span data-ttu-id="a037e-300">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="a037e-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="a037e-301">xml</span><span class="sxs-lookup"><span data-stu-id="a037e-301">xml</span></span>                          | <span data-ttu-id="a037e-302">System.Xml.Xmlдокумент</span><span class="sxs-lookup"><span data-stu-id="a037e-302">System.Xml.XmlDocument</span></span>                                              |
