reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: Описание ускорителей типов, доступных для классов .NET Framework
keywords: powershell,командлет
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ru-RU
ms.lasthandoff: 10/13/2020
ms.locfileid: "93231146"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="7b5b8-104">О ускорителях типов</span><span class="sxs-lookup"><span data-stu-id="7b5b8-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="7b5b8-105">КОРОТКИЙ ОПИСАНИЕ</span><span class="sxs-lookup"><span data-stu-id="7b5b8-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="7b5b8-106">Описание ускорителей типов, доступных для классов .NET Framework</span><span class="sxs-lookup"><span data-stu-id="7b5b8-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="7b5b8-107">ПОДРОБНОЕ ОПИСАНИЕ</span><span class="sxs-lookup"><span data-stu-id="7b5b8-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="7b5b8-108">Ускорители типов являются псевдонимами для классов .NET Framework.</span><span class="sxs-lookup"><span data-stu-id="7b5b8-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="7b5b8-109">Они позволяют обращаться к конкретным классам .NET Framework без явного ввода полного имени класса.</span><span class="sxs-lookup"><span data-stu-id="7b5b8-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="7b5b8-110">Например, можно сократить класс **алиасаттрибуте** с `[System.Management.Automation.AliasAttribute]` на `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="7b5b8-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="7b5b8-111">Все ускорители типов по-прежнему должны быть заключены в квадратные скобки ( `[]` ).</span><span class="sxs-lookup"><span data-stu-id="7b5b8-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="7b5b8-112">Доступные ускорители типов</span><span class="sxs-lookup"><span data-stu-id="7b5b8-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="7b5b8-113">Accelerator</span><span class="sxs-lookup"><span data-stu-id="7b5b8-113">Accelerator</span></span>          |                           <span data-ttu-id="7b5b8-114">Полное имя класса</span><span class="sxs-lookup"><span data-stu-id="7b5b8-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="7b5b8-115">ADSI</span><span class="sxs-lookup"><span data-stu-id="7b5b8-115">adsi</span></span>                         | <span data-ttu-id="7b5b8-116">System. DirectoryServices. DirectoryEntry</span><span class="sxs-lookup"><span data-stu-id="7b5b8-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="7b5b8-117">адсисеарчер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-117">adsisearcher</span></span>                 | <span data-ttu-id="7b5b8-118">System. DirectoryServices. DirectorySearcher</span><span class="sxs-lookup"><span data-stu-id="7b5b8-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="7b5b8-119">Псевдоним</span><span class="sxs-lookup"><span data-stu-id="7b5b8-119">Alias</span></span>                        | <span data-ttu-id="7b5b8-120">System. Management. Automation. Алиасаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="7b5b8-121">алловемптиколлектион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="7b5b8-122">System. Management. Automation. Алловемптиколлектионаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="7b5b8-123">алловемптистринг</span><span class="sxs-lookup"><span data-stu-id="7b5b8-123">AllowEmptyString</span></span>             | <span data-ttu-id="7b5b8-124">System. Management. Automation. Алловемптистрингаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="7b5b8-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="7b5b8-125">AllowNull</span></span>                    | <span data-ttu-id="7b5b8-126">System. Management. Automation. Алловнуллаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="7b5b8-127">аргументкомплетер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-127">ArgumentCompleter</span></span>            | <span data-ttu-id="7b5b8-128">System. Management. Automation. Аргументкомплетераттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="7b5b8-129">аргументкомплетионс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-129">ArgumentCompletions</span></span>          | <span data-ttu-id="7b5b8-130">System. Management. Automation. Аргументкомплетионсаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="7b5b8-131">массиве</span><span class="sxs-lookup"><span data-stu-id="7b5b8-131">array</span></span>                        | <span data-ttu-id="7b5b8-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="7b5b8-132">System.Array</span></span>                                                        |
|<span data-ttu-id="7b5b8-133">bigint</span><span class="sxs-lookup"><span data-stu-id="7b5b8-133">bigint</span></span>                       | <span data-ttu-id="7b5b8-134">System. Numerics. BigInteger</span><span class="sxs-lookup"><span data-stu-id="7b5b8-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="7b5b8-135">bool</span><span class="sxs-lookup"><span data-stu-id="7b5b8-135">bool</span></span>                         | <span data-ttu-id="7b5b8-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="7b5b8-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="7b5b8-137">byte</span><span class="sxs-lookup"><span data-stu-id="7b5b8-137">byte</span></span>                         | <span data-ttu-id="7b5b8-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="7b5b8-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="7b5b8-139">char</span><span class="sxs-lookup"><span data-stu-id="7b5b8-139">char</span></span>                         | <span data-ttu-id="7b5b8-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="7b5b8-140">System.Char</span></span>                                                         |
|<span data-ttu-id="7b5b8-141">Цимкласс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-141">cimclass</span></span>                     | <span data-ttu-id="7b5b8-142">Microsoft. Management. Infrastructure. Цимкласс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="7b5b8-143">Цимконвертер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-143">cimconverter</span></span>                 | <span data-ttu-id="7b5b8-144">Microsoft. Management. Infrastructure. Цимконвертер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="7b5b8-145">ciminstance</span><span class="sxs-lookup"><span data-stu-id="7b5b8-145">ciminstance</span></span>                  | <span data-ttu-id="7b5b8-146">Microsoft.Management.Infrastructure.CimInstance</span><span class="sxs-lookup"><span data-stu-id="7b5b8-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="7b5b8-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="7b5b8-147">CimSession</span></span>                   | <span data-ttu-id="7b5b8-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="7b5b8-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="7b5b8-149">Цимтипе</span><span class="sxs-lookup"><span data-stu-id="7b5b8-149">cimtype</span></span>                      | <span data-ttu-id="7b5b8-150">Microsoft. Management. Infrastructure. Цимтипе</span><span class="sxs-lookup"><span data-stu-id="7b5b8-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="7b5b8-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="7b5b8-151">CmdletBinding</span></span>                | <span data-ttu-id="7b5b8-152">System. Management. Automation. Кмдлетбиндингаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="7b5b8-153">регионов</span><span class="sxs-lookup"><span data-stu-id="7b5b8-153">cultureinfo</span></span>                  | <span data-ttu-id="7b5b8-154">System. Globalization. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="7b5b8-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="7b5b8-155">DATETIME</span><span class="sxs-lookup"><span data-stu-id="7b5b8-155">datetime</span></span>                     | <span data-ttu-id="7b5b8-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="7b5b8-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="7b5b8-157">Decimal</span><span class="sxs-lookup"><span data-stu-id="7b5b8-157">decimal</span></span>                      | <span data-ttu-id="7b5b8-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="7b5b8-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="7b5b8-159">double</span><span class="sxs-lookup"><span data-stu-id="7b5b8-159">double</span></span>                       | <span data-ttu-id="7b5b8-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="7b5b8-160">System.Double</span></span>                                                       |
|<span data-ttu-id="7b5b8-161">DscLocalConfigurationManager</span><span class="sxs-lookup"><span data-stu-id="7b5b8-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="7b5b8-162">System. Management. Automation. Дсклокалконфигуратионманажераттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="7b5b8-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="7b5b8-163">DscProperty</span></span>                  | <span data-ttu-id="7b5b8-164">System. Management. Automation. Дскпропертяттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="7b5b8-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="7b5b8-165">DscResource</span></span>                  | <span data-ttu-id="7b5b8-166">System. Management. Automation. Дскресаурцеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="7b5b8-167">експериментактион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-167">ExperimentAction</span></span>             | <span data-ttu-id="7b5b8-168">System. Management. Automation. Експериментактион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="7b5b8-169">Экспериментальный</span><span class="sxs-lookup"><span data-stu-id="7b5b8-169">Experimental</span></span>                 | <span data-ttu-id="7b5b8-170">System. Management. Automation. Експерименталаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="7b5b8-171">експерименталфеатуре</span><span class="sxs-lookup"><span data-stu-id="7b5b8-171">ExperimentalFeature</span></span>          | <span data-ttu-id="7b5b8-172">System. Management. Automation. Експерименталфеатуре</span><span class="sxs-lookup"><span data-stu-id="7b5b8-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="7b5b8-173">float</span><span class="sxs-lookup"><span data-stu-id="7b5b8-173">float</span></span>                        | <span data-ttu-id="7b5b8-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="7b5b8-174">System.Single</span></span>                                                       |
|<span data-ttu-id="7b5b8-175">guid</span><span class="sxs-lookup"><span data-stu-id="7b5b8-175">guid</span></span>                         | <span data-ttu-id="7b5b8-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="7b5b8-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="7b5b8-177">хеш</span><span class="sxs-lookup"><span data-stu-id="7b5b8-177">hashtable</span></span>                    | <span data-ttu-id="7b5b8-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="7b5b8-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="7b5b8-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="7b5b8-179">initialsessionstate</span></span>          | <span data-ttu-id="7b5b8-180">System.Management.Automation.Runspaces.IniТиалсессионстате</span><span class="sxs-lookup"><span data-stu-id="7b5b8-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="7b5b8-181">INT</span><span class="sxs-lookup"><span data-stu-id="7b5b8-181">int</span></span>                          | <span data-ttu-id="7b5b8-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="7b5b8-183">int16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-183">int16</span></span>                        | <span data-ttu-id="7b5b8-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="7b5b8-185">int32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-185">int32</span></span>                        | <span data-ttu-id="7b5b8-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="7b5b8-187">int64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-187">int64</span></span>                        | <span data-ttu-id="7b5b8-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="7b5b8-189">IP</span><span class="sxs-lookup"><span data-stu-id="7b5b8-189">ipaddress</span></span>                    | <span data-ttu-id="7b5b8-190">System .NET. IPAddress</span><span class="sxs-lookup"><span data-stu-id="7b5b8-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="7b5b8-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="7b5b8-191">IPEndpoint</span></span>                   | <span data-ttu-id="7b5b8-192">System .NET. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="7b5b8-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="7b5b8-193">long</span><span class="sxs-lookup"><span data-stu-id="7b5b8-193">long</span></span>                         | <span data-ttu-id="7b5b8-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="7b5b8-195">MailAddress</span><span class="sxs-lookup"><span data-stu-id="7b5b8-195">mailaddress</span></span>                  | <span data-ttu-id="7b5b8-196">System .NET. mail. MailAddress</span><span class="sxs-lookup"><span data-stu-id="7b5b8-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="7b5b8-197">нуллстринг</span><span class="sxs-lookup"><span data-stu-id="7b5b8-197">NullString</span></span>                   | <span data-ttu-id="7b5b8-198">System. Management. Automation. Language. Нуллстринг</span><span class="sxs-lookup"><span data-stu-id="7b5b8-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="7b5b8-199">обжектсекурити</span><span class="sxs-lookup"><span data-stu-id="7b5b8-199">ObjectSecurity</span></span>               | <span data-ttu-id="7b5b8-200">System. Security. AccessControl. Обжектсекурити</span><span class="sxs-lookup"><span data-stu-id="7b5b8-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="7b5b8-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="7b5b8-201">OutputType</span></span>                   | <span data-ttu-id="7b5b8-202">System. Management. Automation. Аутпуттипеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="7b5b8-203">Параметр</span><span class="sxs-lookup"><span data-stu-id="7b5b8-203">Parameter</span></span>                    | <span data-ttu-id="7b5b8-204">System. Management. Automation. Параметераттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="7b5b8-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="7b5b8-205">PhysicalAddress</span></span>              | <span data-ttu-id="7b5b8-206">System .NET. NetworkInformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="7b5b8-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="7b5b8-207">powershell</span><span class="sxs-lookup"><span data-stu-id="7b5b8-207">powershell</span></span>                   | <span data-ttu-id="7b5b8-208">System. Management. Automation. PowerShell</span><span class="sxs-lookup"><span data-stu-id="7b5b8-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="7b5b8-209">псалиаспроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-209">psaliasproperty</span></span>              | <span data-ttu-id="7b5b8-210">System. Management. Automation. Псалиаспроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="7b5b8-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="7b5b8-211">pscredential</span></span>                 | <span data-ttu-id="7b5b8-212">System.Management.Automation.PSCredential</span><span class="sxs-lookup"><span data-stu-id="7b5b8-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="7b5b8-213">PCSCustomObject</span><span class="sxs-lookup"><span data-stu-id="7b5b8-213">pscustomobject</span></span>               | <span data-ttu-id="7b5b8-214">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="7b5b8-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="7b5b8-215">псдефаултвалуе</span><span class="sxs-lookup"><span data-stu-id="7b5b8-215">PSDefaultValue</span></span>               | <span data-ttu-id="7b5b8-216">System.Management.Automation.PSDЕфаултвалуеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="7b5b8-217">пслистмодифиер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-217">pslistmodifier</span></span>               | <span data-ttu-id="7b5b8-218">System. Management. Automation. Пслистмодифиер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="7b5b8-219">PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="7b5b8-219">psmoduleinfo</span></span>                 | <span data-ttu-id="7b5b8-220">System.Management.Automation.PSModuleInfo</span><span class="sxs-lookup"><span data-stu-id="7b5b8-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="7b5b8-221">пснотепроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-221">psnoteproperty</span></span>               | <span data-ttu-id="7b5b8-222">System. Management. Automation. Пснотепроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="7b5b8-223">PSObject</span><span class="sxs-lookup"><span data-stu-id="7b5b8-223">psobject</span></span>                     | <span data-ttu-id="7b5b8-224">System.Management.Automation.PSObject</span><span class="sxs-lookup"><span data-stu-id="7b5b8-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="7b5b8-225">пспримитиведиктионари</span><span class="sxs-lookup"><span data-stu-id="7b5b8-225">psprimitivedictionary</span></span>        | <span data-ttu-id="7b5b8-226">System. Management. Automation. Пспримитиведиктионари</span><span class="sxs-lookup"><span data-stu-id="7b5b8-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="7b5b8-227">пспропертекспрессион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-227">pspropertyexpression</span></span>         | <span data-ttu-id="7b5b8-228">Microsoft. PowerShell. Commands. Пспропертекспрессион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="7b5b8-229">псскриптмесод</span><span class="sxs-lookup"><span data-stu-id="7b5b8-229">psscriptmethod</span></span>               | <span data-ttu-id="7b5b8-230">System. Management. Automation. Псскриптмесод</span><span class="sxs-lookup"><span data-stu-id="7b5b8-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="7b5b8-231">псскриптпроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-231">psscriptproperty</span></span>             | <span data-ttu-id="7b5b8-232">System. Management. Automation. Псскриптпроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="7b5b8-233">пстипенамеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="7b5b8-234">System. Management. Automation. Пстипенамеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="7b5b8-235">psvariable</span><span class="sxs-lookup"><span data-stu-id="7b5b8-235">psvariable</span></span>                   | <span data-ttu-id="7b5b8-236">System. Management. Automation. PSVariable</span><span class="sxs-lookup"><span data-stu-id="7b5b8-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="7b5b8-237">псвариаблепроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-237">psvariableproperty</span></span>           | <span data-ttu-id="7b5b8-238">System. Management. Automation. Псвариаблепроперти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="7b5b8-239">ref</span><span class="sxs-lookup"><span data-stu-id="7b5b8-239">ref</span></span>                          | <span data-ttu-id="7b5b8-240">System. Management. Automation. Псреференце</span><span class="sxs-lookup"><span data-stu-id="7b5b8-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="7b5b8-241">regex</span><span class="sxs-lookup"><span data-stu-id="7b5b8-241">regex</span></span>                        | <span data-ttu-id="7b5b8-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="7b5b8-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="7b5b8-243">пространство выполнения</span><span class="sxs-lookup"><span data-stu-id="7b5b8-243">runspace</span></span>                     | <span data-ttu-id="7b5b8-244">System. Management. Automation. пространства выполнения</span><span class="sxs-lookup"><span data-stu-id="7b5b8-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="7b5b8-245">рунспацефактори</span><span class="sxs-lookup"><span data-stu-id="7b5b8-245">runspacefactory</span></span>              | <span data-ttu-id="7b5b8-246">System. Management. Automation. пространства выполнения. Рунспацефактори</span><span class="sxs-lookup"><span data-stu-id="7b5b8-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="7b5b8-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="7b5b8-247">sbyte</span></span>                        | <span data-ttu-id="7b5b8-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="7b5b8-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="7b5b8-249">ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="7b5b8-249">scriptblock</span></span>                  | <span data-ttu-id="7b5b8-250">System. Management. Automation. ScriptBlock</span><span class="sxs-lookup"><span data-stu-id="7b5b8-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="7b5b8-251">SecureString</span><span class="sxs-lookup"><span data-stu-id="7b5b8-251">securestring</span></span>                 | <span data-ttu-id="7b5b8-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="7b5b8-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="7b5b8-253">semver</span><span class="sxs-lookup"><span data-stu-id="7b5b8-253">semver</span></span>                       | <span data-ttu-id="7b5b8-254">System. Management. Automation. Семантикверсион</span><span class="sxs-lookup"><span data-stu-id="7b5b8-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="7b5b8-255">short</span><span class="sxs-lookup"><span data-stu-id="7b5b8-255">short</span></span>                        | <span data-ttu-id="7b5b8-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="7b5b8-257">single</span><span class="sxs-lookup"><span data-stu-id="7b5b8-257">single</span></span>                       | <span data-ttu-id="7b5b8-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="7b5b8-258">System.Single</span></span>                                                       |
|<span data-ttu-id="7b5b8-259">строка</span><span class="sxs-lookup"><span data-stu-id="7b5b8-259">string</span></span>                       | <span data-ttu-id="7b5b8-260">System.String</span><span class="sxs-lookup"><span data-stu-id="7b5b8-260">System.String</span></span>                                                       |
|<span data-ttu-id="7b5b8-261">суппортсвилдкардс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-261">SupportsWildcards</span></span>            | <span data-ttu-id="7b5b8-262">System. Management. Automation. Суппортсвилдкардсаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="7b5b8-263">switch</span><span class="sxs-lookup"><span data-stu-id="7b5b8-263">switch</span></span>                       | <span data-ttu-id="7b5b8-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="7b5b8-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="7b5b8-265">Интервал времени</span><span class="sxs-lookup"><span data-stu-id="7b5b8-265">timespan</span></span>                     | <span data-ttu-id="7b5b8-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="7b5b8-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="7b5b8-267">тип</span><span class="sxs-lookup"><span data-stu-id="7b5b8-267">type</span></span>                         | <span data-ttu-id="7b5b8-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="7b5b8-268">System.Type</span></span>                                                         |
|<span data-ttu-id="7b5b8-269">uint</span><span class="sxs-lookup"><span data-stu-id="7b5b8-269">uint</span></span>                         | <span data-ttu-id="7b5b8-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="7b5b8-271">uint16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-271">uint16</span></span>                       | <span data-ttu-id="7b5b8-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="7b5b8-273">uint32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-273">uint32</span></span>                       | <span data-ttu-id="7b5b8-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="7b5b8-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="7b5b8-275">uint64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-275">uint64</span></span>                       | <span data-ttu-id="7b5b8-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="7b5b8-277">ulong</span><span class="sxs-lookup"><span data-stu-id="7b5b8-277">ulong</span></span>                        | <span data-ttu-id="7b5b8-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="7b5b8-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="7b5b8-279">uri</span><span class="sxs-lookup"><span data-stu-id="7b5b8-279">uri</span></span>                          | <span data-ttu-id="7b5b8-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="7b5b8-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="7b5b8-281">ushort</span><span class="sxs-lookup"><span data-stu-id="7b5b8-281">ushort</span></span>                       | <span data-ttu-id="7b5b8-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="7b5b8-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="7b5b8-283">валидатекаунт</span><span class="sxs-lookup"><span data-stu-id="7b5b8-283">ValidateCount</span></span>                | <span data-ttu-id="7b5b8-284">System. Management. Automation. Валидатекаунтаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="7b5b8-285">валидатедриве</span><span class="sxs-lookup"><span data-stu-id="7b5b8-285">ValidateDrive</span></span>                | <span data-ttu-id="7b5b8-286">System. Management. Automation. Валидатедривеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="7b5b8-287">валидателенгс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-287">ValidateLength</span></span>               | <span data-ttu-id="7b5b8-288">System. Management. Automation. Валидателенгсаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="7b5b8-289">валидатенотнулл</span><span class="sxs-lookup"><span data-stu-id="7b5b8-289">ValidateNotNull</span></span>              | <span data-ttu-id="7b5b8-290">System. Management. Automation. Валидатенотнуллаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="7b5b8-291">валидатенотнуллоремпти</span><span class="sxs-lookup"><span data-stu-id="7b5b8-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="7b5b8-292">System. Management. Automation. Валидатенотнуллоремптяттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="7b5b8-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="7b5b8-293">ValidatePattern</span></span>              | <span data-ttu-id="7b5b8-294">System. Management. Automation. Валидатепаттернаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="7b5b8-295">валидатеранже</span><span class="sxs-lookup"><span data-stu-id="7b5b8-295">ValidateRange</span></span>                | <span data-ttu-id="7b5b8-296">System. Management. Automation. Валидатеранжеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="7b5b8-297">валидатескрипт</span><span class="sxs-lookup"><span data-stu-id="7b5b8-297">ValidateScript</span></span>               | <span data-ttu-id="7b5b8-298">System. Management. Automation. Валидатескриптаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="7b5b8-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="7b5b8-299">ValidateSet</span></span>                  | <span data-ttu-id="7b5b8-300">System. Management. Automation. Валидатесетаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="7b5b8-301">валидатетрустеддата</span><span class="sxs-lookup"><span data-stu-id="7b5b8-301">ValidateTrustedData</span></span>          | <span data-ttu-id="7b5b8-302">System. Management. Automation. Валидатетрустеддатааттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="7b5b8-303">валидатеусердриве</span><span class="sxs-lookup"><span data-stu-id="7b5b8-303">ValidateUserDrive</span></span>            | <span data-ttu-id="7b5b8-304">System. Management. Automation. Валидатеусердривеаттрибуте</span><span class="sxs-lookup"><span data-stu-id="7b5b8-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="7b5b8-305">version</span><span class="sxs-lookup"><span data-stu-id="7b5b8-305">version</span></span>                      | <span data-ttu-id="7b5b8-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="7b5b8-306">System.Version</span></span>                                                      |
|<span data-ttu-id="7b5b8-307">void</span><span class="sxs-lookup"><span data-stu-id="7b5b8-307">void</span></span>                         | <span data-ttu-id="7b5b8-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="7b5b8-308">System.Void</span></span>                                                         |
|<span data-ttu-id="7b5b8-309">вилдкардпаттерн</span><span class="sxs-lookup"><span data-stu-id="7b5b8-309">WildcardPattern</span></span>              | <span data-ttu-id="7b5b8-310">System. Management. Automation. Вилдкардпаттерн</span><span class="sxs-lookup"><span data-stu-id="7b5b8-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="7b5b8-311">интерфейса</span><span class="sxs-lookup"><span data-stu-id="7b5b8-311">wmi</span></span>                          | <span data-ttu-id="7b5b8-312">System. Management. ManagementObject</span><span class="sxs-lookup"><span data-stu-id="7b5b8-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="7b5b8-313">WMICLASS</span><span class="sxs-lookup"><span data-stu-id="7b5b8-313">wmiclass</span></span>                     | <span data-ttu-id="7b5b8-314">System. Management. Манажементкласс</span><span class="sxs-lookup"><span data-stu-id="7b5b8-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="7b5b8-315">вмисеарчер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-315">wmisearcher</span></span>                  | <span data-ttu-id="7b5b8-316">System. Management. Манажементобжектсеарчер</span><span class="sxs-lookup"><span data-stu-id="7b5b8-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="7b5b8-317">X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="7b5b8-317">X500DistinguishedName</span></span>        | <span data-ttu-id="7b5b8-318">System. Security. Cryptography. X509Certificates. X500DistinguishedName</span><span class="sxs-lookup"><span data-stu-id="7b5b8-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="7b5b8-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="7b5b8-319">X509Certificate</span></span>              | <span data-ttu-id="7b5b8-320">System. Security. Cryptography. X509Certificates. X509Certificate</span><span class="sxs-lookup"><span data-stu-id="7b5b8-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="7b5b8-321">xml</span><span class="sxs-lookup"><span data-stu-id="7b5b8-321">xml</span></span>                          | <span data-ttu-id="7b5b8-322">System.Xml.Xmlдокумент</span><span class="sxs-lookup"><span data-stu-id="7b5b8-322">System.Xml.XmlDocument</span></span>                                              |
